crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__destructuring-2.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"let {a, b, ...rest} = letters;\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 30,
                    },
                },
                span: 0..30,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 19,
                                },
                            },
                            span: 4..19,
                            kind: Object(
                                ObjectPat {
                                    props: [
                                        Shorthand(
                                            ShorthandPatProp {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 5,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 6,
                                                    },
                                                },
                                                span: 5..6,
                                                ident: BindingIdent {
                                                    name: "a",
                                                    mutable: false,
                                                    span: 5..6,
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 5,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 6,
                                                        },
                                                    },
                                                },
                                                init: None,
                                            },
                                        ),
                                        Shorthand(
                                            ShorthandPatProp {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 8,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 9,
                                                    },
                                                },
                                                span: 8..9,
                                                ident: BindingIdent {
                                                    name: "b",
                                                    mutable: false,
                                                    span: 8..9,
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 8,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 9,
                                                        },
                                                    },
                                                },
                                                init: None,
                                            },
                                        ),
                                        Rest(
                                            RestPat {
                                                arg: Pattern {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 14,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 18,
                                                        },
                                                    },
                                                    span: 14..18,
                                                    kind: Ident(
                                                        BindingIdent {
                                                            name: "rest",
                                                            mutable: false,
                                                            span: 14..18,
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 14,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 18,
                                                                },
                                                            },
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                    ],
                                    optional: false,
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 22,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 29,
                                    },
                                },
                                span: 22..29,
                                kind: Ident(
                                    Ident {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 22,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 29,
                                            },
                                        },
                                        span: 22..29,
                                        name: "letters",
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                        rec: false,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
